--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,21 @@
     tools:openDrawer="start">
 
     <LinearLayout
+        android:id="@+id/heartBeatFragment"
+        android:label="@string/chart_heart_beat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" />
+
+    <LinearLayout
+        android:id="@+id/ll_select"
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="100dp"
-            android:layout_height="100dp"/>
+            android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/btn"
             android:text="@string/btn1"
