--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.MainView$MainActivity">
+    tools:context=".view.main.MainView$MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_height="wrap_content"
