--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <!--    localhost等へのアクセスを行う場合はエラー回避のためここにドメインを記載する    -->
-        <domain includeSubdomains="true">8e522fd7.ngrok.io</domain>
+        <domain includeSubdomains="true">192.168.2.119</domain>
     </domain-config>
 </network-security-config>
